# RayTracer

./: CMakeLists.txt  Color.cpp  GeometricObj.cpp  GeometricObj.h  MeshObj.cpp  MeshObj.h  PhotonUtil.cpp  PhotonUtil.h  README.md  Scene.cpp  Scene.h  Tracer.cpp  Tracer.h  Vec3.cpp  Vec3.h  main.cpp
core/: Color.h  GeometricObj.cpp  SimpleObject.cpp  SimpleObject.h
